2007-04-22  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (ACLOCAL_AMFLAGS): Add contents of env var 
	LOCAL_ACLOCAL_AMFLAGS to allow for systems where the user
	has a mix of system & hacked-up autotools.

2007-04-22  Dalibor Topic  <robilad@kaffe.org>

	* autogen.sh: Removed unnecessary -I m4 flag.

2007-04-19  Casey Marshall  <csm@gnu.org>

	PR classpath/31626:
	* gnu/javax/net/ssl/provider/SSLSocketFactoryImpl.java
	(createSocket): New method.

2007-04-19  Dalibor Topic  <robilad@kaffe.org>

	* tools/gappletviewer.in,
	tools/gjar.in,
	tools/gjarsigner.in,
	tools/gjavah.in,
	tools/gkeytool.in,
	tools/gnative2ascii.in,
	tools/gorbd.in,
	tools/grmic.in,
	tools/grmid.in,
	tools/grmiregistry.in,
	tools/gserialver.in,
	tools/gtnameserv.in: Set datarootdir to fix a warning from 
	configure.

2007-04-19  Dalibor Topic  <robilad@kaffe.org>

	* INSTALL: Removed file generated by autogen.sh.

	* .cvsignore: Added INSTALL.

2007-04-19  Dalibor Topic  <robilad@kaffe.org>

	* INSTALL: Replaced by generic install file.

	* autogen.sh: Removed redundant and no longer necessary 
	sections. Use autoreconf.
 
2007-04-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
        * m4/acinclude.m4
        (CLASSPATH_FIND_JAVAC): Allow detected JAVAC.

2007-04-19  Dalibor Topic  <robilad@kaffe.org>

	* lib/Makefile.am (propertyfiles, cssfiles, metafiles, 
	iconfiles) Removed variables, inlined them into resource
	target to avoid use of shell construct and fix portability
	warning from automake 1.10.

2007-04-18  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/MethodHelper.java (print):
	Changed arguments.  Directly print method name.
	* tools/gnu/classpath/tools/javah/ClassWrapper.java
	(methodNameMap): New field.
	(makeVtable): Initialize it.
	(printMethods): Compute name for bridge targets.

2007-04-18  Andrew Haley  <aph@redhat.com>

	* gnu/java/rmi/server/UnicastConnectionManager.java
	(UnicastConnectionManager(int port, RMIServerSocketFactory)):