@@ -1,3 +1,8 @@
+2007-04-23  Jeroen Frijters  <jeroen@frijters.net>
+
+	PR classpath/31646:
+	* java/util/Arrays.java (qsort): Corrected initial median calculation.
+
 2007-04-22  Dalibor Topic  <robilad@kaffe.org>
 
 	* Makefile.am (ACLOCAL_AMFLAGS): Add contents of env var 
